# RecursiveBlockSelectionAttention

./: .gitignore  LICENSE  README.md  pyproject.toml  testModel.py  unsafe_register_gemma4_opencompass_config.py  unsafe_replace_gemma4_model.py  unsafe_replace_gemma4_model_standardAttentionLongContext.py  unsafe_replace_opencompass_needlebench.py  unsafe_restore_gemma4_model.py  unsafe_restore_opencompass_needlebench.py
logattention/: HierarchyCache.py  RecursiveBlockSelectionAttention.py  __init__.py  gemma4_attention.py
models/: hf_gemma4_31B_it.py  hf_gemma4_e2b_it.py  hf_gemma4_e4b_it.py  modeling_gemma4.py  modeling_gemma4_standardAttention.py  needlebench_v2_128k.py  needlebench_v2_32k.py  needlebench_v2_4k.py  needlebench_v2_single_128k.py  needlebench_v2_single_32k.py  needlebench_v2_single_4k.py
