[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "logattention"
version = "1.0.0"
authors = [{name = "Thomas Zeiringer", email = "thomas.zei9@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0",
    "transformers==5.5.4",
    "accelerate==1.13.0",
]

[project.optional-dependencies]
eval = ["opencompass==0.5.2"]

[tool.setuptools]
packages = ["logattention"]